objects/maps__AdvRouteSettings__c.object
<CustomObject>
    <description>This object will hold the settings used for Advanced Routes</description>
    <fields>
        <fullName>maps__AvailableRouteTypes__c</fullName>
        <description>These are the selected route types</description>
        <label>Available Route Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDurationTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DefaultWorkingHours__c</fullName>
        <description>This is the default working hours for all users</description>
        <label>Default Working Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__OAuthUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the last user that was oauthed</description>
        <label>OAuth User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdvRouteSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Advanced Route Settings</label>
    <nameField>
        <label>Maps Advanced Route Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>